--- a/code/package.json
+++ b/code/package.json
@@ -7,6 +7,7 @@
     "@rollup/plugin-typescript": "^12.1.2",
     "@types/bun": "latest",
     "@types/node": "^22.14.0",
+    "rollup-plugin-polyfill-node": "^0.13.0",
     "tslib": "^2.8.1"
   },
   "peerDependencies": {
