--- a/code/package.json
+++ b/code/package.json
@@ -17,6 +17,7 @@
     "@bsv/sdk": "^1.4.18",
     "@rollup/plugin-commonjs": "^28.0.3",
     "@rollup/plugin-node-resolve": "^16.0.1",
+    "buffer": "^6.0.3",
     "js-1sat-ord": "^0.1.80",
     "rollup": "^4.39.0"
   },
